Updated About me

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -3,6 +3,7 @@
 {{>head}}
 <body>
     {{>header}}
+    <p>This site is created by NeelkanthK</p>
     <img src="/img/me.jpg" alt="" srcset="">
     {{>footer}}
 </body>
